<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layoutDashboard"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escolha_seu_tema_preferido" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rdgCores"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="17dp">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vermelho"
            android:id="@+id/rdbVermelho" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/azul"
            android:id="@+id/rdbAzul"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amarelo"
            android:id="@+id/rdbAmarelo"/>

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:onClick="Salvar"/>

</LinearLayout>